--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "dependencies": {
     "@types/es6-promise": "0.0.32",
-    "axios": "^0.16.2"
+    "axios": "^0.16.2",
+    "collect.js": "^3.0.47"
   },
   "devDependencies": {
     "typescript": "^2.4.2"
