--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "@types/es6-promise": "0.0.32",
     "axios": "^0.16.2",
-    "collect.js": "^3.0.47"
+    "collect.js": "^3.0.47",
+    "moment": "^2.18.1"
   },
   "devDependencies": {
     "typescript": "^2.4.2"
